[package]
name = "blog"
description = "A small tool that generate the static pages of my blog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
askama = "0.12.0"
big_s = "1.0.2"
http = "0.2.9"
octocrab = "0.29.1"
reqwest = "0.11.18"
scraper = { version = "0.17.1", default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
slice-group-by = "0.3.1"
tokio = { version = "1.30.0", features = ["full"] }
