[package]
name = "blog"
description = "A small tool that generate the static pages of my blog"
version = "0.1.0"
edition = "2021"
default-run = "blog"

[dependencies]
anyhow = "1.0.72"
askama = "0.12.0"
big_s = "1.0.2"
http = "0.2.9"
kuchiki = "0.8.1"
octocrab = "0.32.0"
regex = { version = "1.10.2", default-features = false, features = ["unicode-perl"] }
resvg = { version = "0.43.0", default-features = false, features = ["image-webp", "memmap-fonts", "raster-images", "text"] }
rss = { version = "2.0.6", features = ["atom"] }
scraper = { version = "0.17.1", default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
slice-group-by = "0.3.1"
tiny-skia = { version = "0.11.4", default-features = false, features = ["std"] }
tokio = { version = "1.30.0", features = ["full"] }
unicode-segmentation = "1.11.0"
ureq = "2.10.1"
url = "2.5.0"
usvg = "0.43.0"

[profile.release]
opt-level = 0
